[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Menu_UI.gd" type="Script" id=1]

[node name="Menu_UI" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 180.0
script/script = ExtResource( 1 )

[node name="Main Menu" type="MarginContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 180.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 20.0
margin/right = 320.0
margin/bottom = 165.0
custom_constants/separation = 10
alignment = 0

[node name="Title" type="Label" parent="Main Menu/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 113.0
margin/top = 0.0
margin/right = 206.0
margin/bottom = 14.0
text = "Bring the Light"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer" type="MarginContainer" parent="Main Menu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 320.0
margin/bottom = 24.0

[node name="Bt_NewGame" type="Button" parent="Main Menu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 119.0
margin/top = 34.0
margin/right = 201.0
margin/bottom = 54.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false

[node name="Bt_Options" type="Button" parent="Main Menu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 128.0
margin/top = 64.0
margin/right = 191.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Bt_Quit" type="Button" parent="Main Menu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 119.0
margin/top = 94.0
margin/right = 201.0
margin/bottom = 114.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit Game"
flat = false

[node name="Options_UI" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 180.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Options_UI"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 20.0
margin/right = 320.0
margin/bottom = 165.0
custom_constants/separation = 10
alignment = 0

[node name="Options" type="Label" parent="Options_UI/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 109.0
margin/top = 0.0
margin/right = 202.0
margin/bottom = 14.0
text = "Bring the Light"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer" type="MarginContainer" parent="Options_UI/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 312.0
margin/bottom = 24.0

[node name="Bt_Return" type="Button" parent="Options_UI/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 135.0
margin/top = 34.0
margin/right = 177.0
margin/bottom = 54.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Main Menu/VBoxContainer/Bt_NewGame" to="." method="_on_Bt_NewGame_pressed"]

[connection signal="pressed" from="Main Menu/VBoxContainer/Bt_Options" to="." method="_on_Bt_Options_pressed"]

[connection signal="pressed" from="Main Menu/VBoxContainer/Bt_Quit" to="." method="_on_Bt_Quit_pressed"]

[connection signal="pressed" from="Options_UI/VBoxContainer/Bt_Return" to="." method="_on_Bt_Return_pressed"]


